SERVER-55234 Ensure that tenant migration abortReason is recovered correctly on stepup recovery